Handle share index links #23

--- a/src/app/auth/forgot/forgot.component.html
+++ b/src/app/auth/forgot/forgot.component.html
@@ -40,7 +40,7 @@
 							<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
 
 							<p class="invalid-feedback" *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
-							<a *ngIf="error!=''" routerLink="/register">Register for a new account</a>
+							<a *ngIf="error!=''" routerLink="/indexer">Register for a new account</a>
 						</form>
 					</div>
 
@@ -57,7 +57,7 @@
 				</div>
 
 				<div style="height: 25px;">
-					<a routerLink="/login" class="btn btn-link" style="float: right;" ><< Back to login</a>
+					<a routerLink="/indexer" class="btn btn-link" style="float: right;" ><< Back to login</a>
 				</div>
 
 			</mat-card>
