--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -54,7 +54,7 @@
 								<span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
 								Register
 							</button>
-							<a routerLink="/login" class="btn btn-link">login with existing account</a>
+							<a routerLink="/indexer" class="btn btn-link">login with existing account</a>
 						</div>
 
 						<p class="invalid-feedback" *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
