--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -15,7 +15,7 @@
 
 				<app-alert type="success" title="Password reset complete!" *ngIf="success" [dismissible]="false">
 					<h5>You can now log in with your new password</h5>
-					<button class="btn btn-success" routerLink="/login">
+					<button class="btn btn-success" routerLink="/indexer">
 						Continue
 					</button>
 				</app-alert>
@@ -52,7 +52,7 @@
 							<app-alert type="error" *ngIf="error">
 								<h5>{{error}}</h5>
 							</app-alert>
-							<a *ngIf="error!=''" routerLink="/register">Register for a new account</a>
+							<a *ngIf="error!=''" routerLink="/indexer">Register for a new account</a>
 						</form>
 
 					</div>
@@ -70,7 +70,7 @@
 				</div>
 
 				<div style="height: 25px;">
-					<a routerLink="/login" class="btn btn-link" style="float: right;" ><< Back to login</a>
+					<a routerLink="/indexer" class="btn btn-link" style="float: right;" ><< Back to login</a>
 				</div>
 
 			</mat-card>
