Update login flow #25

--- a/src/app/auth/login-register/login-register.component.scss
+++ b/src/app/auth/login-register/login-register.component.scss
@@ -254,6 +254,10 @@ $gutters: 24px;
       right: 70px;
       position: absolute;
     }
+    .form-recovery:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
 
   // Panel
