--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -1,7 +1,7 @@
 <mat-card class="dense-card">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10">
+			<div class="col-xs-12">
 
 				<h2 style="margin-top: 0;">Install the city indexer <span class="gd-primary">userscript</span></h2>
 				<h4>The GrepoData userscript allows you to collect enemy intelligence while playing Grepolis in your browser.</h4>
@@ -104,17 +104,19 @@
 <mat-card class="dense-card">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10">
+			<div class="col-xs-12">
 
-				<h2 style="margin-top: 0;">Collecting enemy intelligence</h2>
-				<h4>Once you have installed the userscript, you can collect new intelligence by indexing reports from your inbox or alliance forum.</h4>
+        <h2 style="margin-top: 0;">Userscript <span class="gd-primary">functionality</span> overview</h2>
+				<h4>Once you have installed the userscript, you can collect new intelligence by indexing reports from your inbox or alliance forum.
+        While in-game, you will also be able to browse the collected intel for each town.
+        </h4>
 				<br/>
 
 				<div class="alert alert-gd-1">
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-lg-6">
-								<h3>Indexing reports</h3>
+								<h3>1. Indexing new reports</h3>
 								<h5>
 									Use the <strong>'Index +' button</strong> as shown on the right to add reports to your index.
 									<br/>The index button will be added to reports in your inbox and on reports posted on your alliance forum.
@@ -126,6 +128,42 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="alert alert-gd-1">
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-xs-12 col-sm-12 col-lg-6">
+								<h3>2. Browsing collected intel</h3>
+								<h5>
+									Use the <strong>'Intel' button</strong> in the town context menu to open the town intelligence window.
+									<br/><br/>In this window you will be able to see the collected intel for a specific town as shown on the right.
+									<br/>You will also be able to view an overview of player and alliance intel on grepodata.com
+								</h5>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
+								<img class="lib-img" style="max-width: 100%; display: block;" src="../../../../../assets/images/indexer_town_sm.png" alt="Browsing enemy town intelligence">
+							</div>
+						</div>
+					</div>
+				</div>
+
+<!--        <div class="container-fluid">-->
+<!--          <div class="row">-->
+<!--            <div class="hidden-xs col-sm-12 text-center gd-secondary" style="margin-top: 50px;">-->
+<!--              <div fxLayout="row" fxLayoutAlign="center center">-->
+<!--                <div fxFlex="45" fxLayout="column" fxLayoutAlign="end center">-->
+<!--                  <img class="lib-img" style="max-width: 65%; display: block; border: 1px solid #334254;" src="../../assets/images/index.png" alt="Grepolis index report">-->
+<!--                  <h3>Upload reports to collect intel (<span class="gd-primary">Index +</span>)</h3>-->
+<!--                </div>-->
+<!--                <div fxFlex="10" style="font-size: 40px;"><i class="fa fa-arrow-right gd-secondary" aria-hidden="true"></i></div>-->
+<!--                <div fxFlex="45" fxLayout="column" fxLayoutAlign="start center">-->
+<!--                  <img class="lib-img" style="max-width: 90%; display: block;" src="../../assets/images/indexer_town_sm.png" alt="Grepolis town intel">-->
+<!--                  <h3>Browse the collected intelligence</h3>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
 
 			</div>
 		</div>
