--- a/src/app/conquest/conquest.component.html
+++ b/src/app/conquest/conquest.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="embedded==false" style="min-height: calc(100vh - 160px);">
 
   <div class="decorated-card">
-    <div class='decorated-card-header decorated-title'>
+    <div class='decorated-card-header-secondary decorated-title'>
       <h1>
         Showing conquests for:
         <i *ngIf="type == 'town'" class="fa fa-university gd-secondary" aria-hidden="true"></i>
