--- a/src/app/alliance-change/alliance-change.component.html
+++ b/src/app/alliance-change/alliance-change.component.html
@@ -1,7 +1,7 @@
 <div>
 
   <div class="decorated-card">
-    <div class='decorated-card-header decorated-title'>
+    <div class='decorated-card-header-secondary decorated-title'>
       <h1>
         Showing alliance changes for: &nbsp; &nbsp; &nbsp;
         <i *ngIf="type == 'town'" class="fa fa-university gd-secondary" aria-hidden="true"></i>
