--- a/src/app/auth/login-register/login-register.component.html
+++ b/src/app/auth/login-register/login-register.component.html
@@ -7,7 +7,7 @@
         <div class="col-xs-12 col-sm-6 index-input index-input-left">
           <div class="form-panel register">
             <div class="form-header">
-              <h1 style="margin-top: 3px;">Register</h1>
+              <h1 style="margin-top: 3px;"><mat-icon style="vertical-align: text-top; padding-top: 2px;">perm_identity</mat-icon>Register</h1>
               <h5>Start collecting and sharing enemy intelligence</h5>
             </div>
             <div class="form-content">
@@ -48,7 +48,7 @@
                 </div>
                 <div class="form-group">
                   <mat-checkbox formControlName="privacy" style="font-size: 16px;">
-                    By submitting this form you agree with our <a routerLink="/privacy" target="_blank">Privacy Policy</a>
+                    By submitting this form you agree to our <a routerLink="/privacy" target="_blank">Privacy Policy</a>
                   </mat-checkbox>
                   <div *ngIf="register_submitted && rf.privacy.errors" class="invalid-form-text">
                     <mat-icon class="error-icon">error_outline</mat-icon>Accept our privacy policy to continue
@@ -66,7 +66,7 @@
           </div>
 
         </div>
-        <div class="col-xs-12 col-sm-6 index-input index-input-right">
+        <div class="col-xs-12 col-sm-6 index-input index-input-right" *ngIf="!forgotPassswordForm">
 
           <div class="form-panel login">
 
@@ -83,7 +83,7 @@
               <form [formGroup]="loginForm" (ngSubmit)="doLogin()">
                 <div class="form-group" [ngClass]="{ 'is-invalid-input': login_submitted && lf.username.errors }">
                   <mat-icon *ngIf="login_submitted && lf.username.errors" class="error-icon inside">error_outline</mat-icon>
-                  <label for="username">Username or Email Adress</label>
+                  <label for="username">Username or Email Address</label>
                   <input type="text" id="username" name="username" required="required"
                          formControlName="username"/>
                   <div *ngIf="login_submitted && lf.username.errors" class="invalid-form-text">
@@ -102,7 +102,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <a class="form-recovery" routerLink="/forgot">Forgot Your Password?</a>
+                  <a class="form-recovery" (click)="togglePasswordForm()">Forgot Your Password? <mat-icon class="mat-icon-title-inline" style="vertical-align: sub;">mail_outline</mat-icon></a>
                 </div>
                 <div *ngIf="lf.password.errors || lf.username.errors" style="margin-top: 10px;">
                   <br/>
@@ -111,10 +111,72 @@
                 </div>
                 <p class="invalid-feedback" *ngIf="login_error!=''" style="color: #a94442 !important;">{{login_error}}</p>
                 <div class="form-group">
-                  <button type="submit">Log In</button>
+                  <button type="submit" [disabled]="login_loading">Log In</button>
                   <mat-progress-bar *ngIf="login_loading" class="btn-progress-bar" mode="indeterminate"></mat-progress-bar>
                 </div>
               </form>
+
+
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-xs-12 col-sm-6 index-input index-input-right" *ngIf="forgotPassswordForm">
+
+          <div class="form-panel login">
+
+            <div style="text-align: center; font-weight: 800; font-size: 50px">
+              <span style="color: rgb(103, 103, 103)">GREPO</span>
+              <span style="color: rgb(24, 188, 156)">DATA</span>
+            </div>
+
+            <div class="form-header">
+              <h1>Reset your password</h1>
+              <h5 *ngIf="!reset_success">Enter your email address to reset your password</h5>
+            </div>
+            <div class="form-content">
+              <form [formGroup]="resetForm" (ngSubmit)="doForgot()" *ngIf="!reset_success">
+                <br/>
+                <br/>
+                <div class="form-group" [ngClass]="{ 'is-invalid-input': reset_submitted && resetf.resetmail.errors }">
+                  <mat-icon *ngIf="reset_submitted && resetf.resetmail.errors" class="error-icon inside">error_outline</mat-icon>
+                  <label for="resetmail">Email Address</label>
+                  <input autocomplete="email" type="text" id="resetmail" name="resetmail" required="required"
+                         formControlName="resetmail"/>
+                  <div *ngIf="reset_submitted && resetf.resetmail.errors" class="invalid-form-text">
+                    <div *ngIf="resetf.resetmail.errors.required">Email address is required</div>
+                    <div *ngIf="resetf.resetmail.errors.custom">{{resetf.resetmail.errors.custom}}</div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <a class="form-recovery" (click)="togglePasswordForm()">
+                    Back to login <mat-icon class="mat-icon-title-inline" style="vertical-align: sub;">login</mat-icon>
+                  </a>
+                </div>
+                <p class="invalid-feedback" *ngIf="reset_error!=''" style="color: #a94442 !important;"><br/><br/>{{reset_error}}</p>
+                <div class="form-group">
+                  <button type="submit" [disabled]="reset_loading">Request new password</button>
+                  <mat-progress-bar *ngIf="reset_loading" class="btn-progress-bar" mode="indeterminate"></mat-progress-bar>
+                </div>
+              </form>
+
+              <div *ngIf="reset_success">
+
+                <app-alert type="success" title="Password reset link sent" [dismissible]="false">
+                  <h5 class="gd-secondary">You received an email from admin@grepodata.com<br/>(check your spam folder!)</h5>
+                  <h4><strong>Click on the link in the email to continue</strong></h4>
+                </app-alert>
+
+
+                <div style="margin-top: 70px;">
+                  <div class="form-group" style="float: right;">
+                    <a class="form-recovery" (click)="togglePasswordForm()" style="position: inherit !important;">
+                      Back to login <mat-icon class="mat-icon-title-inline" style="vertical-align: sub;">login</mat-icon>
+                    </a>
+                  </div>
+                </div>
+              </div>
 
 
             </div>
