--- a/src/app/header/contact-dialog.html
+++ b/src/app/header/contact-dialog.html
@@ -21,7 +21,7 @@
 				    <mat-checkbox [disabled]="loading" [(ngModel)]="privacy_agreed"></mat-checkbox>
 			    </div>
 			    <div class="col-xs-11" style="text-align: left;">
-				    <p>By submitting this form you agree with our <a routerLink="/privacy" (click)="dialogRef.close()">Privacy Policy</a></p>
+				    <p>By submitting this form you agree to our <a routerLink="/privacy" (click)="dialogRef.close()">Privacy Policy</a></p>
 			    </div>
 		    </div>
 	      <br/>
