--- a/src/app/indexer/landing-page/landing-page.component.html
+++ b/src/app/indexer/landing-page/landing-page.component.html
@@ -50,118 +50,24 @@
         </div>
 
         <div>
-          <app-login-register [embeddedCallback]="loginCallback"></app-login-register>
+          <app-login-register></app-login-register>
         </div>
 
-
-				<div class="container">
-					<div class="row">
-						<div class="hidden-xs col-sm-12 text-center gd-secondary" style="margin-top: 50px;">
-							<div fxLayout="row" fxLayoutAlign="center center">
-								<div fxFlex="45" fxLayout="column" fxLayoutAlign="end center">
-									<img class="lib-img" style="max-width: 65%; display: block; border: 1px solid #334254;" src="../../assets/images/index.png" alt="Grepolis index report">
-                  <h3>Upload reports to collect intel (<span class="gd-primary">Index +</span>)</h3>
-								</div>
-								<div fxFlex="10" style="font-size: 40px;"><i class="fa fa-arrow-right gd-secondary" aria-hidden="true"></i></div>
-								<div fxFlex="45" fxLayout="column" fxLayoutAlign="start center">
-									<img class="lib-img" style="max-width: 90%; display: block;" src="../../assets/images/indexer_town_sm.png" alt="Grepolis town intel">
-									<h3>Browse the collected intelligence</h3>
-								</div>
-
-							</div>
-						</div>
-					</div>
-				</div>
-				<br/>
 				<br/>
 				<br/>
 
-				<div class="container-fluid" *ngIf="stats != ''">
-					<div class="col-xs-12 text-center">
-
-						<h1 style="font-family: Montserrat !important;" class="gd-primary">
-							Currently in our database
-              <button mat-button class="mat-raised-button bg-gd-2" style="vertical-align: bottom; margin-left: 50px;" routerLink="/analytics">
-                View detailed report&nbsp;<mat-icon style="margin-top: -3px;">launch</mat-icon>
-              </button>
-						</h1>
-
-						<br/>
-
-						<div class="container">
-							<div class="row">
-								<div class="col-lg-2 col-sm-2 col-xs-4">
-									<div class="circle-tile ">
-										<div class="circle-tile-heading dark-blue"><i class="fa fa-list fa-fw fa-2x"></i></div>
-										<div class="circle-tile-content dark-blue">
-											<div class="circle-tile-description text-faded"> Indexes created</div>
-											<div class="circle-tile-number text-faded ">{{stats.index_count}}</div>
-											<!--<a class="circle-tile-footer" href="#">More Info <i class="fa fa-chevron-circle-right"></i></a>-->
-										</div>
-									</div>
-								</div>
-
-								<div class="col-lg-2 col-sm-2 col-xs-4">
-									<div class="circle-tile ">
-										<div class="circle-tile-heading dark-blue"><i class="fa fa-code fa-fw fa-2x"></i></div>
-										<div class="circle-tile-content dark-blue">
-											<div class="circle-tile-description text-faded"> Active intelligence</div>
-											<div class="circle-tile-number text-faded " sty>{{stats.reports | NumberFilter}}</div>
-										</div>
-									</div>
-								</div>
-
-								<div class="col-lg-2 col-sm-2 col-xs-4">
-									<div class="circle-tile ">
-										<div class="circle-tile-heading red"><i class="fa fa-university fa-fw fa-2x"></i></div>
-										<div class="circle-tile-content red">
-											<div class="circle-tile-description text-faded"> Fireship cities</div>
-											<div class="circle-tile-number text-faded ">{{stats.fire_count | NumberFilter}}</div>
-										</div>
-									</div>
-								</div>
-
-								<div class="col-lg-2 col-sm-2 col-xs-4">
-									<div class="circle-tile ">
-										<div class="circle-tile-heading blue"><i class="fa fa-university fa-fw fa-2x"></i></div>
-										<div class="circle-tile-content blue">
-											<div class="circle-tile-description text-faded"> Mythical cities</div>
-											<div class="circle-tile-number text-faded ">{{stats.myth_count | NumberFilter}}</div>
-										</div>
-									</div>
-								</div>
-
-								<div class="col-lg-2 col-sm-2 col-xs-4">
-									<div class="circle-tile ">
-										<div class="circle-tile-heading green"><i class="fa fa-user fa-fw fa-2x"></i></div>
-										<div class="circle-tile-content green">
-											<div class="circle-tile-description text-faded"> Enemy players</div>
-											<div class="circle-tile-number text-faded ">{{stats.player_count | NumberFilter}}</div>
-										</div>
-									</div>
-								</div>
-
-								<div class="col-lg-2 col-sm-2 col-xs-4">
-									<div class="circle-tile ">
-										<div class="circle-tile-heading green"><i class="fa fa-users fa-fw fa-2x"></i></div>
-										<div class="circle-tile-content green">
-											<div class="circle-tile-description text-faded"> Enemy alliances</div>
-											<div class="circle-tile-number text-faded ">{{stats.alliance_count | NumberFilter}}</div>
-										</div>
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-					</div>
-				</div>
-				<br/>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-12">
+              <app-userscript></app-userscript>
+            </div>
+          </div>
+        </div>
 
 				<!--FaQ-->
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12 col-sm-12">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-12">
 							<mat-card class="decorated-card">
 								<mat-card-title class='decorated-card-header-secondary decorated-title text-center' style="margin-bottom: 0px;">
 									<h3><i class="fa fa-question-circle"></i> Frequently asked questions</h3>
@@ -174,6 +80,90 @@
 						</div>
 					</div>
 				</div>
+
+        <br/>
+
+        <div class="container-fluid" *ngIf="stats != ''">
+          <div class="col-xs-12 text-center">
+
+            <h1 style="font-family: Montserrat !important;" class="gd-primary">
+              Currently in our database
+              <button mat-button class="mat-raised-button bg-gd-2" style="vertical-align: bottom; margin-left: 50px;" routerLink="/analytics">
+                View detailed report&nbsp;<mat-icon style="margin-top: -3px;">launch</mat-icon>
+              </button>
+            </h1>
+
+            <br/>
+
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-2 col-sm-2 col-xs-4">
+                  <div class="circle-tile ">
+                    <div class="circle-tile-heading dark-blue"><i class="fa fa-list fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content dark-blue">
+                      <div class="circle-tile-description text-faded"> Indexes created</div>
+                      <div class="circle-tile-number text-faded ">{{stats.index_count}}</div>
+                      <!--<a class="circle-tile-footer" href="#">More Info <i class="fa fa-chevron-circle-right"></i></a>-->
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2 col-sm-2 col-xs-4">
+                  <div class="circle-tile ">
+                    <div class="circle-tile-heading dark-blue"><i class="fa fa-code fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content dark-blue">
+                      <div class="circle-tile-description text-faded"> Active intelligence</div>
+                      <div class="circle-tile-number text-faded " sty>{{stats.reports | NumberFilter}}</div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2 col-sm-2 col-xs-4">
+                  <div class="circle-tile ">
+                    <div class="circle-tile-heading red"><i class="fa fa-university fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content red">
+                      <div class="circle-tile-description text-faded"> Fireship cities</div>
+                      <div class="circle-tile-number text-faded ">{{stats.fire_count | NumberFilter}}</div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2 col-sm-2 col-xs-4">
+                  <div class="circle-tile ">
+                    <div class="circle-tile-heading blue"><i class="fa fa-university fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content blue">
+                      <div class="circle-tile-description text-faded"> Mythical cities</div>
+                      <div class="circle-tile-number text-faded ">{{stats.myth_count | NumberFilter}}</div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2 col-sm-2 col-xs-4">
+                  <div class="circle-tile ">
+                    <div class="circle-tile-heading green"><i class="fa fa-user fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content green">
+                      <div class="circle-tile-description text-faded"> Enemy players</div>
+                      <div class="circle-tile-number text-faded ">{{stats.player_count | NumberFilter}}</div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-2 col-sm-2 col-xs-4">
+                  <div class="circle-tile ">
+                    <div class="circle-tile-heading green"><i class="fa fa-users fa-fw fa-2x"></i></div>
+                    <div class="circle-tile-content green">
+                      <div class="circle-tile-description text-faded"> Enemy alliances</div>
+                      <div class="circle-tile-number text-faded ">{{stats.alliance_count | NumberFilter}}</div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <br/>
 
 				<div class="container">
 					<div class="col-xs-10 col-xs-offset-1 text-center">
