--- a/src/styles.scss
+++ b/src/styles.scss
@@ -897,11 +897,23 @@ fieldset[disabled] .btn-success.active {
   outline: none;
 }
 .btn-lg {
-  padding: 10px 25px;
+  padding: 0 25px;
 
   .mat-icon {
     vertical-align: text-bottom !important;
   }
+}
+
+.gd-txt-icon-container {
+  text-align: center;
+  font-weight: 800;
+  font-size: 50px;
+}
+.gd-txt-icon-1 {
+  color: rgb(103, 103, 103)
+}
+.gd-txt-icon-2 {
+  color: rgb(24, 188, 156)
 }
 
 .close {
