--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -10,6 +10,8 @@
   </mat-sidenav>
 	<div class="profile-container" *ngIf="logged_in">
 
+    <div class="page-wrapper"></div>
+
 		<div *ngIf="!account_confirmed" style="">
 			<app-confirm></app-confirm>
 		</div>
