--- a/src/app/indexer/search/search.component.scss
+++ b/src/app/indexer/search/search.component.scss
@@ -3,6 +3,18 @@ mat-card {
   box-shadow: none !important;
 }
 
+.search-icon {
+  font-size: 34px;
+  position: absolute;
+  left: 8px;
+  top: 9px;
+}
+#sb-search-players {
+  .search-icon {
+    left: 10px !important;
+  }
+}
+
 .top-container {
   margin-bottom: 5px;
 }
@@ -148,5 +160,8 @@ mat-paginator {
     font-size: 16px !important;
     height: 35px !important;
     line-height: 35px !important;
+  }
+  .search-icon {
+    top: 0 !important;
   }
 }
