--- a/src/app/indexer/search/search.component.html
+++ b/src/app/indexer/search/search.component.html
@@ -11,7 +11,7 @@
                 <form>
                   <input autocomplete="off" class="sb-search-input" placeholder="Search players..." type="search" value="" name="search" id="search-players" (keyup)="searchPlayers($event)">
                   <input class="sb-search-submit" type="button" value="">
-                  <span class="sb-icon-search" (click)="doSearchPlayers()"><i class="fa fa-user" ></i></span>
+                  <span class="sb-icon-search" (click)="doSearchPlayers()"><mat-icon class="search-icon">person_search</mat-icon></span>
                   <mat-progress-bar *ngIf="searching_players && loading" class="searching-loading" mode="indeterminate"></mat-progress-bar>
                 </form>
               </div>
@@ -21,7 +21,7 @@
                 <form>
                   <input autocomplete="off" class="sb-search-input" placeholder="Search alliances..." type="search" value="" name="search" id="search-alliances" (keyup)="searchAlliances($event)">
                   <input class="sb-search-submit" type="button" value="">
-                  <span class="sb-icon-search" (click)="doSearchAlliances()"><i class="fa fa-group" ></i></span>
+                  <span class="sb-icon-search" (click)="doSearchAlliances()"><mat-icon class="search-icon">groups</mat-icon></span>
                   <mat-progress-bar *ngIf="searching_alliances && loading" class="searching-loading" mode="indeterminate"></mat-progress-bar>
                 </form>
               </div>
@@ -31,7 +31,7 @@
                 <form>
                   <input autocomplete="off" class="sb-search-input" placeholder="Search towns..." type="search" value="" name="search" id="search-towns" (keyup)="searchTowns($event)">
                   <input class="sb-search-submit" type="button" value="">
-                  <span class="sb-icon-search" (click)="doSearchTowns()"><i class="fa fa-university" ></i></span>
+                  <span class="sb-icon-search" (click)="doSearchTowns()"><mat-icon class="search-icon">account_balance</mat-icon></span>
                   <mat-progress-bar *ngIf="searching_towns && loading" class="searching-loading" mode="indeterminate"></mat-progress-bar>
                 </form>
               </div>
